--- a/anyway_connect/pubspec.yaml
+++ b/anyway_connect/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bluetooth_serial: ^0.4.0
+  provider: ^6.1.1
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
