--- a/anyway_remote/pubspec.yaml
+++ b/anyway_remote/pubspec.yaml
@@ -1,4 +1,4 @@
-name: anyway_connect
+name: anyway_remote
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -30,9 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_bluetooth_serial: ^0.4.0
   provider: ^6.1.1
   flutter_webrtc: ^0.9.47
+  ffi: ^2.1.0
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -40,7 +40,8 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^3.0.1
+  steamworks_gen: ^0.4.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
