--- a/anyway_connect/pubspec.yaml
+++ b/anyway_connect/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_bluetooth_serial: ^0.4.0
   provider: ^6.1.1
   flutter_webrtc: ^0.9.47
+  network_info_plus: ^4.1.0
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
