--- a/anyway_remote/pubspec.yaml
+++ b/anyway_remote/pubspec.yaml
@@ -32,8 +32,9 @@ dependencies:
     sdk: flutter
   provider: ^6.1.1
   flutter_webrtc: ^0.9.47
-  ffi: ^2.1.0
   shared_preferences: ^2.2.2
+  logging: ^1.2.0
+  ffi: ^2.1.0
 
 dev_dependencies:
   # The "flutter_lints" package below contains a set of recommended lints to
